v1.1.0/modules/schema/pages/class/ControlledAppliance.adoc
= `ControlledAppliance`
:toclevels: 4


+++Appliance controlled with a PAN device control.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ControlledAppliance`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ControlledAppliance`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<isElectricVehicle,`isElectricVehicle`>>
//| [[slots_table.isElectricVehicle]]<<isElectricVehicle,`isElectricVehicle`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is an electric vehicle.+++
| _n/a_

| <<isExteriorLighting,`isExteriorLighting`>>
//| [[slots_table.isExteriorLighting]]<<isExteriorLighting,`isExteriorLighting`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is exterior lighting.+++
| _n/a_

| <<isGenerationSystem,`isGenerationSystem`>>
//| [[slots_table.isGenerationSystem]]<<isGenerationSystem,`isGenerationSystem`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a generation system.+++
| _n/a_

| <<isHvacCompressorOrFurnace,`isHvacCompressorOrFurnace`>>
//| [[slots_table.isHvacCompressorOrFurnace]]<<isHvacCompressorOrFurnace,`isHvacCompressorOrFurnace`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is HVAC compressor or furnace.+++
| _n/a_

| <<isInteriorLighting,`isInteriorLighting`>>
//| [[slots_table.isInteriorLighting]]<<isInteriorLighting,`isInteriorLighting`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is interior lighting.+++
| _n/a_

| <<isIrrigationPump,`isIrrigationPump`>>
//| [[slots_table.isIrrigationPump]]<<isIrrigationPump,`isIrrigationPump`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is an irrigation pump.+++
| _n/a_

| <<isManagedCommercialIndustrialLoad,`isManagedCommercialIndustrialLoad`>>
//| [[slots_table.isManagedCommercialIndustrialLoad]]<<isManagedCommercialIndustrialLoad,`isManagedCommercialIndustrialLoad`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is managed commercial or industrial load.+++
| _n/a_

| <<isPoolPumpSpaJacuzzi,`isPoolPumpSpaJacuzzi`>>
//| [[slots_table.isPoolPumpSpaJacuzzi]]<<isPoolPumpSpaJacuzzi,`isPoolPumpSpaJacuzzi`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a pool, pump, spa or jacuzzi.+++
| _n/a_

| <<isSimpleMiscLoad,`isSimpleMiscLoad`>>
//| [[slots_table.isSimpleMiscLoad]]<<isSimpleMiscLoad,`isSimpleMiscLoad`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a simple miscellaneous load.+++
| _n/a_

| <<isSmartAppliance,`isSmartAppliance`>>
//| [[slots_table.isSmartAppliance]]<<isSmartAppliance,`isSmartAppliance`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a smart appliance.+++
| _n/a_

| <<isStripAndBaseboardHeater,`isStripAndBaseboardHeater`>>
//| [[slots_table.isStripAndBaseboardHeater]]<<isStripAndBaseboardHeater,`isStripAndBaseboardHeater`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a stip or baseboard heater.+++
| _n/a_

| <<isWaterHeater,`isWaterHeater`>>
//| [[slots_table.isWaterHeater]]<<isWaterHeater,`isWaterHeater`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the appliance is a water heater.+++
| _n/a_
|===

'''


//[discrete]
[#isElectricVehicle]
=== `isElectricVehicle`
+++True if the appliance is an electric vehicle.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isElectricVehicle`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isElectricVehicle,&#10548;>>
--
////


//[discrete]
[#isExteriorLighting]
=== `isExteriorLighting`
+++True if the appliance is exterior lighting.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isExteriorLighting`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isExteriorLighting,&#10548;>>
--
////


//[discrete]
[#isGenerationSystem]
=== `isGenerationSystem`
+++True if the appliance is a generation system.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isGenerationSystem`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isGenerationSystem,&#10548;>>
--
////


//[discrete]
[#isHvacCompressorOrFurnace]
=== `isHvacCompressorOrFurnace`
+++True if the appliance is HVAC compressor or furnace.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isHvacCompressorOrFurnace`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isHvacCompressorOrFurnace,&#10548;>>
--
////


//[discrete]
[#isInteriorLighting]
=== `isInteriorLighting`
+++True if the appliance is interior lighting.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isInteriorLighting`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isInteriorLighting,&#10548;>>
--
////


//[discrete]
[#isIrrigationPump]
=== `isIrrigationPump`
+++True if the appliance is an irrigation pump.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isIrrigationPump`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isIrrigationPump,&#10548;>>
--
////


//[discrete]
[#isManagedCommercialIndustrialLoad]
=== `isManagedCommercialIndustrialLoad`
+++True if the appliance is managed commercial or industrial load.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isManagedCommercialIndustrialLoad`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isManagedCommercialIndustrialLoad,&#10548;>>
--
////


//[discrete]
[#isPoolPumpSpaJacuzzi]
=== `isPoolPumpSpaJacuzzi`
+++True if the appliance is a pool, pump, spa or jacuzzi.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isPoolPumpSpaJacuzzi`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isPoolPumpSpaJacuzzi,&#10548;>>
--
////


//[discrete]
[#isSimpleMiscLoad]
=== `isSimpleMiscLoad`
+++True if the appliance is a simple miscellaneous load.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isSimpleMiscLoad`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isSimpleMiscLoad,&#10548;>>
--
////


//[discrete]
[#isSmartAppliance]
=== `isSmartAppliance`
+++True if the appliance is a smart appliance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isSmartAppliance`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isSmartAppliance,&#10548;>>
--
////


//[discrete]
[#isStripAndBaseboardHeater]
=== `isStripAndBaseboardHeater`
+++True if the appliance is a stip or baseboard heater.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isStripAndBaseboardHeater`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isStripAndBaseboardHeater,&#10548;>>
--
////


//[discrete]
[#isWaterHeater]
=== `isWaterHeater`
+++True if the appliance is a water heater.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ControlledAppliance.isWaterHeater`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isWaterHeater,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PanDemandResponse.adoc[`PanDemandResponse`] | xref::class/PanDemandResponse.adoc#appliance[`appliance`]


|===

